--- a/glxraysim/mainwindow.ui
+++ b/glxraysim/mainwindow.ui
@@ -70,13 +70,13 @@
      <rect>
       <x>380</x>
       <y>60</y>
-      <width>141</width>
+      <width>151</width>
       <height>331</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout">
      <property name="sizeConstraint">
-      <enum>QLayout::SetMaximumSize</enum>
+      <enum>QLayout::SetDefaultConstraint</enum>
      </property>
      <item row="1" column="0">
       <widget class="QSlider" name="xSlider">
