--- a/glxraysim/mainwindow.ui
+++ b/glxraysim/mainwindow.ui
@@ -80,7 +80,7 @@
       <x>550</x>
       <y>50</y>
       <width>151</width>
-      <height>141</height>
+      <height>111</height>
      </rect>
     </property>
     <property name="title">
@@ -92,7 +92,7 @@
        <x>10</x>
        <y>20</y>
        <width>131</width>
-       <height>70</height>
+       <height>51</height>
       </rect>
      </property>
      <layout class="QVBoxLayout" name="transformationModeLayout">
@@ -119,23 +119,13 @@
         </property>
        </widget>
       </item>
-      <item>
-       <widget class="QRadioButton" name="scaleModeRadioButton">
-        <property name="text">
-         <string>Scale</string>
-        </property>
-        <property name="shortcut">
-         <string>Ctrl+S</string>
-        </property>
-       </widget>
-      </item>
      </layout>
     </widget>
     <widget class="QWidget" name="horizontalLayoutWidget">
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>100</y>
+       <y>70</y>
        <width>131</width>
        <height>31</height>
       </rect>
@@ -190,13 +180,48 @@
     <property name="geometry">
      <rect>
       <x>550</x>
-      <y>200</y>
+      <y>170</y>
       <width>151</width>
       <height>26</height>
      </rect>
     </property>
     <property name="text">
      <string>Reset view</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="scaleLabel">
+    <property name="geometry">
+     <rect>
+      <x>550</x>
+      <y>210</y>
+      <width>41</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Scale:</string>
+    </property>
+   </widget>
+   <widget class="QSlider" name="scaleSlider">
+    <property name="geometry">
+     <rect>
+      <x>590</x>
+      <y>210</y>
+      <width>111</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="minimum">
+     <number>1</number>
+    </property>
+    <property name="maximum">
+     <number>100</number>
+    </property>
+    <property name="value">
+     <number>100</number>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
     </property>
    </widget>
   </widget>
