--- a/glxraysim/mainwindow.ui
+++ b/glxraysim/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>178</width>
-    <height>382</height>
+    <height>402</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -236,6 +236,40 @@
     </property>
    </widget>
   </widget>
+  <widget class="QMenuBar" name="menuBar">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>178</width>
+     <height>26</height>
+    </rect>
+   </property>
+   <widget class="QMenu" name="fileMenu">
+    <property name="title">
+     <string>File</string>
+    </property>
+    <addaction name="exitAction"/>
+   </widget>
+   <widget class="QMenu" name="extrasMenu">
+    <property name="title">
+     <string>Extras</string>
+    </property>
+    <addaction name="simpleSumUpAction"/>
+   </widget>
+   <addaction name="fileMenu"/>
+   <addaction name="extrasMenu"/>
+  </widget>
+  <action name="exitAction">
+   <property name="text">
+    <string>Exit</string>
+   </property>
+  </action>
+  <action name="simpleSumUpAction">
+   <property name="text">
+    <string>Simple Sum-up</string>
+   </property>
+  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
