--- a/glxraysim/mainwindow.ui
+++ b/glxraysim/mainwindow.ui
@@ -264,6 +264,9 @@
    <property name="text">
     <string>Exit</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+Q</string>
+   </property>
   </action>
   <action name="simpleSumUpAction">
    <property name="text">
