--- a/glxraysim/gldialog.ui
+++ b/glxraysim/gldialog.ui
@@ -14,6 +14,17 @@
    <string>OpenGL View</string>
   </property>
   <layout class="QHBoxLayout" name="mainLayout"/>
+  <action name="actionSaveFramebuffer">
+   <property name="text">
+    <string>SaveFramebuffer</string>
+   </property>
+   <property name="toolTip">
+    <string>Save framebuffer to image</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+S</string>
+   </property>
+  </action>
  </widget>
  <resources/>
  <connections/>
