--- a/glxraysim/graphicsdialog.ui
+++ b/glxraysim/graphicsdialog.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>graphicsdialog</class>
- <widget class="QDialog" name="graphicsdialog">
+ <class>GraphicsDialog</class>
+ <widget class="QDialog" name="GraphicsDialog">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Graphics view</string>
   </property>
   <property name="autoFillBackground">
    <bool>false</bool>
