Fixed some major bugs in simple sum-up algorithm; works nearly correct now (TODO: Fix label background

--- a/glxraysim/graphicsdialog.ui
+++ b/glxraysim/graphicsdialog.ui
@@ -57,7 +57,7 @@
       </palette>
      </property>
      <property name="frameShape">
-      <enum>QFrame::Box</enum>
+      <enum>QFrame::NoFrame</enum>
      </property>
      <property name="textFormat">
       <enum>Qt::PlainText</enum>
