--- a/glxraysim/configurelightdialog.ui
+++ b/glxraysim/configurelightdialog.ui
@@ -249,7 +249,11 @@
        </widget>
       </item>
       <item row="3" column="4">
-       <widget class="QDoubleSpinBox" name="light1SpecularAlphaSpinBox"/>
+       <widget class="QDoubleSpinBox" name="light1SpecularAlphaSpinBox">
+        <property name="decimals">
+         <number>3</number>
+        </property>
+       </widget>
       </item>
       <item row="4" column="1">
        <widget class="QDoubleSpinBox" name="light1ConstantAttenuationSpinBox"/>
