--- a/glxraysim/configurelightdialog.ui
+++ b/glxraysim/configurelightdialog.ui
@@ -277,7 +277,7 @@
        </widget>
       </item>
       <item row="5" column="1">
-       <widget class="QDoubleSpinBox" name="light1XDirectionSpinBox">
+       <widget class="QDoubleSpinBox" name="light1DirectionXSpinBox">
         <property name="decimals">
          <number>3</number>
         </property>
@@ -297,7 +297,7 @@
        </widget>
       </item>
       <item row="5" column="2">
-       <widget class="QDoubleSpinBox" name="light1YDirectionSpinBox">
+       <widget class="QDoubleSpinBox" name="light1DirectionYSpinBox">
         <property name="decimals">
          <number>3</number>
         </property>
@@ -310,7 +310,7 @@
        </widget>
       </item>
       <item row="5" column="3">
-       <widget class="QDoubleSpinBox" name="light1ZDirectionSpinBox">
+       <widget class="QDoubleSpinBox" name="light1DirectionZSpinBox">
         <property name="decimals">
          <number>3</number>
         </property>
