Fixed some light config dialog UI bugs

--- a/glxraysim/configurelightdialog.ui
+++ b/glxraysim/configurelightdialog.ui
@@ -155,6 +155,12 @@
         <property name="decimals">
          <number>3</number>
         </property>
+        <property name="maximum">
+         <double>1.000000000000000</double>
+        </property>
+        <property name="singleStep">
+         <double>0.010000000000000</double>
+        </property>
        </widget>
       </item>
       <item row="2" column="2">
@@ -162,12 +168,24 @@
         <property name="decimals">
          <number>3</number>
         </property>
+        <property name="maximum">
+         <double>1.000000000000000</double>
+        </property>
+        <property name="singleStep">
+         <double>0.010000000000000</double>
+        </property>
        </widget>
       </item>
       <item row="2" column="3">
        <widget class="QDoubleSpinBox" name="light1AmbientBlueSpinBox">
         <property name="decimals">
          <number>3</number>
+        </property>
+        <property name="maximum">
+         <double>1.000000000000000</double>
+        </property>
+        <property name="singleStep">
+         <double>0.010000000000000</double>
         </property>
        </widget>
       </item>
@@ -183,6 +201,12 @@
         <property name="decimals">
          <number>3</number>
         </property>
+        <property name="maximum">
+         <double>1.000000000000000</double>
+        </property>
+        <property name="singleStep">
+         <double>0.010000000000000</double>
+        </property>
        </widget>
       </item>
       <item row="3" column="2">
@@ -190,12 +214,24 @@
         <property name="decimals">
          <number>3</number>
         </property>
+        <property name="maximum">
+         <double>1.000000000000000</double>
+        </property>
+        <property name="singleStep">
+         <double>0.010000000000000</double>
+        </property>
        </widget>
       </item>
       <item row="3" column="3">
        <widget class="QDoubleSpinBox" name="light1DiffuseBlueSpinBox">
         <property name="decimals">
          <number>3</number>
+        </property>
+        <property name="maximum">
+         <double>1.000000000000000</double>
+        </property>
+        <property name="singleStep">
+         <double>0.010000000000000</double>
         </property>
        </widget>
       </item>
@@ -211,6 +247,12 @@
         <property name="decimals">
          <number>3</number>
         </property>
+        <property name="maximum">
+         <double>1.000000000000000</double>
+        </property>
+        <property name="singleStep">
+         <double>0.010000000000000</double>
+        </property>
        </widget>
       </item>
       <item row="4" column="2">
@@ -218,12 +260,24 @@
         <property name="decimals">
          <number>3</number>
         </property>
+        <property name="maximum">
+         <double>1.000000000000000</double>
+        </property>
+        <property name="singleStep">
+         <double>0.010000000000000</double>
+        </property>
        </widget>
       </item>
       <item row="4" column="3">
        <widget class="QDoubleSpinBox" name="light1SpecularBlueSpinBox">
         <property name="decimals">
          <number>3</number>
+        </property>
+        <property name="maximum">
+         <double>1.000000000000000</double>
+        </property>
+        <property name="singleStep">
+         <double>0.010000000000000</double>
         </property>
        </widget>
       </item>
@@ -239,6 +293,12 @@
         <property name="decimals">
          <number>3</number>
         </property>
+        <property name="maximum">
+         <double>1.000000000000000</double>
+        </property>
+        <property name="singleStep">
+         <double>0.010000000000000</double>
+        </property>
        </widget>
       </item>
       <item row="3" column="4">
@@ -246,12 +306,24 @@
         <property name="decimals">
          <number>3</number>
         </property>
+        <property name="maximum">
+         <double>1.000000000000000</double>
+        </property>
+        <property name="singleStep">
+         <double>0.010000000000000</double>
+        </property>
        </widget>
       </item>
       <item row="4" column="4">
        <widget class="QDoubleSpinBox" name="light1SpecularAlphaSpinBox">
         <property name="decimals">
          <number>3</number>
+        </property>
+        <property name="maximum">
+         <double>1.000000000000000</double>
+        </property>
+        <property name="singleStep">
+         <double>0.010000000000000</double>
         </property>
        </widget>
       </item>
