--- a/glxraysim/mainwindow.ui
+++ b/glxraysim/mainwindow.ui
@@ -260,6 +260,7 @@
     </property>
     <addaction name="simpleSumUpAction"/>
     <addaction name="lightPropertiesAction"/>
+    <addaction name="alphaTestAction"/>
    </widget>
    <addaction name="fileMenu"/>
    <addaction name="extrasMenu"/>
@@ -280,6 +281,11 @@
   <action name="lightPropertiesAction">
    <property name="text">
     <string>Light properties</string>
+   </property>
+  </action>
+  <action name="alphaTestAction">
+   <property name="text">
+    <string>Alpha test</string>
    </property>
   </action>
  </widget>
